# hyg-usb_linux

./: .gitignore  CMakeLists.txt  README.md  config.h.in
cmake/: Findlibpthread-static.cmake  Findlibrt-static.cmake  Findlibusb-1.0.cmake
man/: CMakeLists.txt  hyg-usb.1
man/fr/man1/: hyg-usb.1
man/man1/: hyg-usb.1
src/: main.c
